--- a/directCSS.html
+++ b/directCSS.html
@@ -3,4 +3,17 @@
      <title>INTERNAL STYLE</title>
    </head>
    <body style="background-colour: sandybrown;">
+       <center>
+           <table style="background-colour: silver; width: 80%; border-style: groove; text-align: center;"
+               <tr>
+                   <td style"font-size: 50; font-style: italic; font-family: 'Franklin Gothic Medium', 'Arial Narrow', sans-serlif;">Latihan css 1</td>
+               </tr>
+           </table>
+    
+   
+           <br><br>
+   
+           <table>
+               <tr>
+                  
    
