--- a/directCSS.html
+++ b/directCSS.html
@@ -15,5 +15,23 @@
    
            <table>
                <tr>
-                  
-   
+                   <td>Nama :</td>
+                   <td>Faqrul Aiman</td>
+              </tr>
+              <tr>
+                  <td>Cita :</td>
+                  <td>Engineer</td>
+             </tr>
+             <tr>
+                  <td>Hobi :</td>
+                  <td>Bermain bola sepak</td>
+             </tr>
+             <tr>
+                 <td>Asal :</td>
+                 <td>Johor</td>
+            </tr>
+          </table>
+       </center>
+   </body>
+  
+</html>
