--- a/directCSS.html
+++ b/directCSS.html
@@ -15,10 +15,10 @@
    
            <table>
                <tr>
-                   <td>Nama :</td>
+                   <td style="width: 25%;">Nama :</td>
                    <td>Faqrul Aiman</td>
               </tr>
-              <tr>
+              <tr style="background-colour:  limegreen;">
                   <td>Cita :</td>
                   <td>Engineer</td>
              </tr>
@@ -26,7 +26,7 @@
                   <td>Hobi :</td>
                   <td>Bermain bola sepak</td>
              </tr>
-             <tr>
+             <tr  style="background-colour:  limegreen;">
                  <td>Asal :</td>
                  <td>Johor</td>
             </tr>
