--- a/directCSS.html
+++ b/directCSS.html
@@ -2,9 +2,9 @@
    <head>
      <title>INTERNAL STYLE</title>
    </head>
-   <body style="background-colour:sandybrown;">
+   <body style="background-color:sandybrown;">
        <center>
-           <table style="background-colour: silver; width: 80%; border-style: groove; text-align: center;"
+           <table style="background-color: silver; width: 80%; border-style: groove; text-align: center;"
                <tr>
                    <td style"font-size: 50; font-style: italic; font-family: 'Franklin Gothic Medium', 'Arial Narrow', sans-serlif;">Latihan css 1</td>
                </tr>
@@ -18,7 +18,7 @@
                    <td style="width:25%;">Nama :</td>
                    <td>Faqrul Aiman</td>
               </tr>
-              <tr style="background-colour:  limegreen;">
+              <tr style="background-color:  limegreen;">
                   <td>Cita :</td>
                   <td>Engineer</td>
              </tr>
@@ -26,7 +26,7 @@
                   <td>Hobi :</td>
                   <td>Bermain bola sepak</td>
              </tr>
-             <tr  style="background-colour:  limegreen;">
+             <tr  style="background-color:  limegreen;">
                  <td>Asal :</td>
                  <td>Johor</td>
             </tr>
