--- a/directCSS.html
+++ b/directCSS.html
@@ -13,7 +13,7 @@
    
            <br><br>
    
-           <table>
+           <table style="width : 50%;background-color:lightgreen; border-style: double; border-width: 5;">
                <tr>
                    <td style="width:25%;">Nama :</td>
                    <td>Faqrul Aiman</td>
