--- a/externalCSS.html
+++ b/externalCSS.html
@@ -1,1 +1,18 @@
+<html>
+  <head>
+    <title>External CSS</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+                                          
+  <body class="ini_ialah_body">
+    <center>
+        <table>
+            <tr>
+                <td class="header">Latihan CSS 1</td>
+            </tr>
+        </table>
 
+        <br><br>
+
+        <table class="table2">
+            <tr>
