--- a/externalCSS.html
+++ b/externalCSS.html
@@ -16,3 +16,23 @@
 
         <table class="table2">
             <tr>
+                <td>Nama :</td>
+                <td>Faqrul Aiman</td>
+           </tr>
+           <tr>
+               <td>Cita :</td>
+               <td>Engineer</td>
+           </tr>
+           <tr>
+              <td>Hobi :</td>
+              <td>Bermain bola sepak</td>
+           </tr>
+           <tr>
+              <td>Asal :</td>
+              <td>Johor</td>
+          </tr>
+          </table>
+       </center>
+   </body>
+  
+</html>
