--- a/divLAYOUT.html
+++ b/divLAYOUT.html
@@ -20,11 +20,15 @@
         padding-bottom: 5px;
         padding-left: 5px;
       }
+      ul {
+         border: double;
+      }
       a {
           text-decoration: none;
       }
       li {
           list-style-type: none;
+          border: double;
       }
       .kandungan {
           width: 80%;
