--- a/divLAYOUT.html
+++ b/divLAYOUT.html
@@ -21,7 +21,7 @@
         padding-left: 5px;
       }
       ul {
-         border: double;
+         
       }
       a {
           text-decoration: none;
@@ -29,6 +29,7 @@
       li {
           list-style-type: none;
           border: double;
+          float: left;
       }
       .kandungan {
           width: 80%;
