--- a/divLAYOUT.html
+++ b/divLAYOUT.html
@@ -21,7 +21,8 @@
         padding-left: 5px;
       }
       ul {
-         
+          overflow: hidden;
+        
       }
       a {
           text-decoration: none;
