--- a/divLAYOUT.html
+++ b/divLAYOUT.html
@@ -31,6 +31,7 @@
           list-style-type: none;
           border: double;
           float: left;
+          padding: 10px;
       }
       .kandungan {
           width: 80%;
