--- a/divLAYOUT.html
+++ b/divLAYOUT.html
@@ -22,7 +22,8 @@
       }
       ul {
           overflow: hidden;
-        
+          margin: 0;
+          padding: 0;
       }
       a {
           text-decoration: none;
