--- a/divLAYOUT.html
+++ b/divLAYOUT.html
@@ -27,6 +27,7 @@
       }
       a {
           text-decoration: none;
+          padding: 10px;
       }
       li {
           list-style-type: none;
