--- a/divLAYOUT.html
+++ b/divLAYOUT.html
@@ -31,7 +31,9 @@
       }
       li {
           list-style-type: none;
-          float: left;          
+          border: double;
+          float: left;
+          
       }
       .kandungan {
           width: 80%;
