--- a/divLAYOUT.html
+++ b/divLAYOUT.html
@@ -19,6 +19,7 @@
         padding-top: 5px;
         padding-bottom: 5px;
         padding-left: 5px;
+        background-color: grey;
       }
       ul {
           overflow: hidden;
