--- a/divLAYOUT.html
+++ b/divLAYOUT.html
@@ -29,6 +29,7 @@
       a {
           text-decoration: none;
           padding: 10px;
+          display: block;
       }
       li {
           list-style-type: none;
