--- a/divLAYOUT.html
+++ b/divLAYOUT.html
@@ -35,6 +35,9 @@
           list-style-type: none;
           float: left;         
       }
+      .menu:hover {
+          background-color: yellowgreen;
+      }
       .kandungan {
           width: 80%;
           margin: auto;
