--- a/divLAYOUT.html
+++ b/divLAYOUT.html
@@ -35,7 +35,7 @@
           list-style-type: none;
           float: left;         
       }
-      ul:hover {
+      li:hover {
           background-color: yellowgreen;
       }
       .kandungan {
